feat: end commit

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,13 +16,17 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.TestTrinityWizards">
+            android:theme="@style/Theme.TestTrinityWizards"
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".EditContactActivity"
+            android:theme="@style/Theme.TestTrinityWizards"
+            android:windowSoftInputMode="adjustResize">
         </activity>
     </application>
 
